@@ -1,3 +1,15 @@
+2006/01/18	kaffeetisch
+
+	Merge from HEAD:
+
+	* Glib.pm, GObject.xs, GType.xs: Change the way GObject type
+	mappings are initialized.
+
+	* GObject.xs: Apply patch from Rafael Garcia-Suarez that fixes the
+	undead object macros on 64-bit platforms.
+
+	* GType.xs: Hush a compiler warning.
+
 2006/01/13	muppetman
 
 	* GObject.xs: Ignoring the undead flag in _gperl_fetch_wrapper_key()
